# paperise

./: .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
utils/: __init__.py  ascii.py  base.py  border.py  dither.py  filters.py  io_utils.py  metadata.py  palette.py  pixelate.py  quantize.py  resize.py
